added lorem ipsum

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <link rel="icon" href="./assets/icon.png">
         <link rel="stylesheet" href="./styles/love.css" type="text/css">
         <script defer src="./scripts/love.js"></script>
-        <title> F r i k i</title>
+        <title>Lorem Ipsum</title>
     </head>
     <body>
         <div id="heart" class="heart">
@@ -15,16 +15,14 @@
         </div>
         <div id="heart-popup" class="popup">
           <article class="content">
-            <h1>VALE DE REGALO</h1>
+            <h1>LOREM IPSUM</h1>
             <p>
-              ¡Has conseguido un vale de regalo para ir de cita conmigo!<br>
-              Contiene los siguientes eventos para el <i><u>Sábado 25 de Febrero</u></i>:
-            </p>
-            <ol class="centered-list">
-              <li>Ir de picnic a comer en el Parque del Sur.</li>
-              <li>Disfrutar toda la tarde en el Holiday World.</li>
-            </ol>
-            <img src="./assets/tickets.png" width="100" height="100"> 
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer egestas convallis massa eu tempus. 
+              Proin accumsan gravida ex id ultricies. Vestibulum fringilla interdum diam. Nunc fringilla auctor urna, 
+              eu porttitor mi semper vel. Curabitur nec leo at enim maximus tristique quis ac lorem. Nam id enim dapibus, 
+              scelerisque neque rhoncus, vestibulum ex. Donec hendrerit augue non ultrices malesuada. Curabitur eu ante leo. 
+              Fusce blandit felis id justo consectetur, quis rutrum sem imperdiet. Mauris facilisis blandit est ac iaculis.
+            </p> 
           </article>
         </div>
     </body>
